<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/homefavourite"
    />
    <ListView android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="45dip"
    android:id="@+id/listFavourites">
    </ListView>
    
    <RelativeLayout
  		android:id="@+id/programfooter"
        android:layout_marginTop="-45dip" 
        android:padding="0dip"
        android:layout_alignParentBottom="true"
        android:gravity="bottom|right" 
        android:background="@android:drawable/bottom_bar"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent">
        <Button
            android:id="@+id/main_casa"
            android:text="@string/Casa"
            android:minWidth="100sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_mylocation"
            android:layout_marginBottom="-4dip" 
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="false" 
            />
        
        <Button
            android:id="@+id/main_program"
            android:text="@string/Canais"
            android:minWidth="100sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableRight="@android:drawable/ic_input_get"
            android:layout_marginBottom="-4dip" 
            android:layout_alignParentRight="true"
            android:layout_centerVertical="false" 
            />
    </RelativeLayout>
</LinearLayout>
